ISPN-9959 Build with JDK 11 by default
* Configure maven enforcer to require JDK 11+
* Adjust javadoc-* module dependencies to acquiesce stricter JavaDoc requirements
* Build JMX docs in an additional execution
* Upgrade Karaf to 4.2.2
* Build on Jenkins with JDK 11
* Add a java8-test which runs all tests using a JDK installed in JAVA8_HOME