@@ -175,6 +175,8 @@
       <testjvm.commonArgs>-XX:+UseG1GC -XX:-TieredCompilation -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${user.dir} -Djboss.modules.settings.xml.url=${jboss.modules.settings.xml.url}</testjvm.commonArgs>
       <testjvm.jigsawArgs />
       <forkJvmArgs>-Xmx1G ${testjvm.commonArgs}</forkJvmArgs>
+      <server.jvm>${env.JAVA_HOME}</server.jvm>
+      <server.jvm.args>${testjvm.commonArgs} ${testjvm.jigsawArgs}</server.jvm.args>
       <infinispan.module-suffix>-${project.artifactId}</infinispan.module-suffix>
       <ansi.strip/>
       <infinispan.test.jgroups.protocol>tcp</infinispan.test.jgroups.protocol>
@@ -4225,13 +4227,13 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${version.maven.shade}</version>
-               <dependencies>
+               <!--dependencies>
                   <dependency>
                      <groupId>org.ow2.asm</groupId>
                      <artifactId>asm</artifactId>
                      <version>${version.asm.ow2}</version>
                   </dependency>
-               </dependencies>
+               </dependencies-->
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -4352,8 +4354,7 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.maven-compiler-plugin}</version>
                <configuration>
-                  <source>${version.java}</source>
-                  <target>${version.java}</target>
+                  <release>8</release>
                   <encoding>UTF-8</encoding>
                   <excludes>
                      <exclude>**/package-info.java</exclude>
@@ -5010,67 +5011,22 @@
                --add-opens=java.management/javax.management=ALL-UNNAMED
                --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
+               --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+               --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
+               --add-modules=java.se
             </testjvm.jigsawargs>
          </properties>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-dependency-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>jdk-misc</id>
-                        <phase>process-sources</phase>
-                        <goals>
-                           <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                           <!-- Download org.jboss:jdk-misc to the target directory -->
-                           <artifactItems>
-                              <artifactItem>
-                                 <groupId>org.jboss</groupId>
-                                 <artifactId>jdk-misc</artifactId>
-                                 <version>2.Final</version>
-                                 <type>jar</type>
-                                 <overWrite>true</overWrite>
-                                 <outputDirectory>${project.build.directory}</outputDirectory>
-                                 <destFileName>jdk-misc.jar</destFileName>
-                              </artifactItem>
-                           </artifactItems>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-               <plugin>
-                  <artifactId>maven-compiler-plugin</artifactId>
-                  <configuration>
-                     <compilerArgument combine.children="append">-XDignore.symbol.file</compilerArgument>
-                     <!-- Forking is necessary to allow for the compiler args to be picked up. -->
-                     <fork combine.children="append">true</fork>
-                     <release>8</release>
-                     <!-- Include a skeleton implementation of some classes removed in JDK10+ -->
-                     <additionalClasspathElements>
-                        <additionalClasspathElement>${project.build.directory}/jdk-misc.jar</additionalClasspathElement>
-                     </additionalClasspathElements>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
       </profile>
       <profile>
          <!-- Profile used to compile Java 10-specific classes. It requires that the java10.home property points to a JDK 10 installation -->
          <id>jdk10-compile</id>
          <activation>
-            <property>
-               <name>java10.home</name>
-            </property>
             <file>
                <exists>${basedir}/src/main/java10</exists>
             </file>
          </activation>
          <build>
             <plugins>
-
                <plugin>
                   <artifactId>maven-compiler-plugin</artifactId>
                   <executions>
@@ -5081,7 +5037,6 @@
                            <goal>compile</goal>
                         </goals>
                         <configuration>
-                           <executable>${java10.home}/bin/javac</executable>
                            <release>10</release>
                            <compileSourceRoots>${project.basedir}/src/main/java10</compileSourceRoots>
                            <outputDirectory>${project.build.outputDirectory}/META-INF/versions/10</outputDirectory>
@@ -5133,7 +5088,6 @@
                            <goal>test</goal>
                         </goals>
                         <configuration>
-                           <jvm>${java10.home}/bin/java</jvm>
                            <groups>org.infinispan.commons.test.categories.Java10</groups>
                         </configuration>
                      </execution>
@@ -5145,9 +5099,6 @@
       <profile>
          <id>jdk10-test-compile</id>
          <activation>
-            <property>
-               <name>java10.home</name>
-            </property>
             <file>
                <exists>${basedir}/src/test/java10</exists>
             </file>
@@ -5191,29 +5142,50 @@
             </plugins>
          </build>
       </profile>
+
       <profile>
-         <id>pre-jigsaw</id>
+         <id>java8-test</id>
          <activation>
-            <file>
-               <exists>{java.home}/../lib/tools.jar</exists>
-            </file>
+            <activeByDefault>false</activeByDefault>
          </activation>
+         <properties>
+            <server.jvm>${env.JAVA8_HOME}</server.jvm>
+            <server.jvm.args>${testjvm.commonArgs}</server.jvm.args>
+         </properties>
          <build>
             <plugins>
                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-antrun-plugin</artifactId>
-                  <dependencies>
-                     <!-- Java 9 includes the compiler in the default module -->
-                     <!-- So we only need the tools.jar dependency on Java 8 -->
-                     <dependency>
-                        <groupId>com.sun</groupId>
-                        <artifactId>tools</artifactId>
-                        <version>${java.version}</version>
-                        <scope>system</scope>
-                        <systemPath>${java.home}/../lib/tools.jar</systemPath>
-                     </dependency>
-                  </dependencies>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <!-- Do not run tests with the main JDK -->
+                        <id>default-test</id>
+                        <phase>none</phase>
+                     </execution>
+                     <execution>
+                        <!-- Do not run the JDK10+-specific tests with the main JDK -->
+                        <id>java10-test</id>
+                        <phase>none</phase>
+                     </execution>
+                     <execution>
+                        <id>java8-test</id>
+                        <phase>test</phase>
+                        <goals>
+                           <goal>test</goal>
+                        </goals>
+                        <configuration>
+                           <jvm>${env.JAVA8_HOME}/bin/java</jvm>
+                           <argLine>${forkJvmArgs}</argLine>
+                        </configuration>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <artifactId>maven-failsafe-plugin</artifactId>
+                  <configuration>
+                     <jvm>${env.JAVA8_HOME}/bin/java</jvm>
+                     <argLine>${forkJvmArgs}</argLine>
+                  </configuration>
                </plugin>
             </plugins>
          </build>
